{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 358,
  "lineage": "bf0b34ba-58da-c008-054f-1610f0128296",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "linux_academy_playground_client",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-047f9f2f5072dd073",
            "arn": "arn:aws:ec2:us-west-2:777829610915:instance/i-0a453b3547be40cdd",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0a453b3547be40cdd",
            "instance_state": "running",
            "instance_type": "a1.medium",
            "ipv6_address_count": 0,
            "key_name": "t480-laptop-default",
            "monitoring": false,
            "primary_network_interface_id": "eni-04e973d3630b6f08f",
            "private_dns": "ip-172-31-7-15.us-west-2.compute.internal",
            "private_ip": "172.31.7.15",
            "public_dns": "ec2-34-214-23-12.us-west-2.compute.amazonaws.com",
            "public_ip": "34.214.23.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e1877e0d9fc2b1d4",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "apex_apartment",
              "intraconnected"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-216a2578",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0048463f45cb63f7e",
              "sg-0f29eba798c8c2f28"
            ]
          },
          "dependencies": [
            "aws_security_group.apex_apartment",
            "aws_security_group.intraconnected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "linux_academy_playground_server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-047f9f2f5072dd073",
            "arn": "arn:aws:ec2:us-west-2:777829610915:instance/i-017446b949db8ada4",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdb",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-2:777829610915:key/06f62793-389d-48b6-b661-7cb130b25b55",
                "volume_id": "vol-0a4224f5ded72a021",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-017446b949db8ada4",
            "instance_state": "running",
            "instance_type": "a1.medium",
            "ipv6_address_count": 0,
            "key_name": "t480-laptop-default",
            "monitoring": false,
            "primary_network_interface_id": "eni-0c9c48a7df5897f53",
            "private_dns": "ip-172-31-2-215.us-west-2.compute.internal",
            "private_ip": "172.31.2.215",
            "public_dns": "ec2-34-219-25-169.us-west-2.compute.amazonaws.com",
            "public_ip": "34.219.25.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-2:777829610915:key/06f62793-389d-48b6-b661-7cb130b25b55",
                "volume_id": "vol-0c4a0f785816d7416",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "apex_apartment",
              "intraconnected"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-216a2578",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0048463f45cb63f7e",
              "sg-0f29eba798c8c2f28"
            ]
          },
          "dependencies": [
            "aws_key_pair.old_laptop_default",
            "aws_key_pair.t480_laptop",
            "aws_security_group.apex_apartment",
            "aws_security_group.intraconnected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apex_apartment",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:777829610915:security-group/sg-0048463f45cb63f7e",
            "description": "all access needs from my apex apartment",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0048463f45cb63f7e",
            "ingress": [
              {
                "cidr_blocks": [
                  "73.78.216.54/32",
                  "73.229.170.110/32"
                ],
                "description": "",
                "from_port": 2022,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2022
              },
              {
                "cidr_blocks": [
                  "73.78.216.54/32",
                  "73.229.170.110/32"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "73.78.216.54/32",
                  "73.229.170.110/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "apex_apartment",
            "name_prefix": null,
            "owner_id": "777829610915",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-ef9d928a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "intraconnected",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:777829610915:security-group/sg-0f29eba798c8c2f28",
            "description": "Allow members to connect to each other",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0f29eba798c8c2f28",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2049
              }
            ],
            "name": "intraconnected",
            "name_prefix": null,
            "owner_id": "777829610915",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-ef9d928a"
          }
        }
      ]
    }
  ]
}